--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,37 @@
 <section class="section">
   <header class="section--heading nerko--wtbold font-xlarge">
-      <span class="section--textbox">Combo Deals</span>
-      <div class="row">
-        <div class="column" *ngFor="let banner of banners">
-            <div  class="column__img" [ngStyle]="{'background-image': 'url(' + banner.url + ')'}">
-                 <h2>{{banner?.name}}</h2>
+    <span class="section--textbox">Combo Deals</span>
+    <div class="row">
+      <div class="column" *ngFor="let banner of banners">
+        <div class="column__img" [ngStyle]="{'background-image': 'url(' + banner.url + ')'}">
+          <h2>{{banner?.name}}</h2>
           <p>Some text..</p>
-            </div>
-         
         </div>
-        
+
       </div>
+
+    </div>
   </header>
 </section>
 <section class="section">
-    <header class="section--heading nerko--wtbold font-xlarge">
-        <span class="section--textbox">Our Menu</span>
-    </header>
-    <div class="food_list" *ngFor="let food of foods">
-        <div class="food_list--img">
-        <div class="img-box"> 
-             
-        </div>
-        </div>
-        <div class="food_list--info">
-sdsd
-        </div>
+  <header class="section--heading nerko--wtbold font-xlarge">
+    <span class="section--textbox">Our Menu</span>
+  </header>
+  <div class="food_list" *ngFor="let food of foods">
+    <div class="food_list--img">
+      <div class="img-box" [ngStyle]="{'background-image': 'url(' + food.url + ')'}">
+
       </div>
-  </section>
+    </div>
+    <div class="food_list--info">
+      <span class="block roboto--wt300">
+        X 1
+      </span>
+      <div style="display: flex;" class="full-width margin_top--1rem margin_btm--1rem font-large ">
+        <div class="font-large  nerko--wtbold full-width"> {{food?.name}} </div>
+        <div class="right-aligned roboto--wtbold full-width">&#8377;{{food?.price}}</div>
+      </div>
+
+    </div>
+  </div>
+</section>
