--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -44,9 +44,8 @@
 }
 .food_list{
     width: 100%;
-    margin-top: 2%;
+    margin-top: 2%;padding-bottom: 2%;
     border-bottom: 1px solid $color-light-grey;
-    padding: 2%;
 &:after {
     content: "";
     display: table;
@@ -61,10 +60,17 @@
     float: left;
     width: 80%;
 }
+.img-box{
+    height: 12vh;
+    width: 10vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 1rem;
+}
 @media only screen and (max-width: 1024px) {
 
 .row{
-    margin-top: 8%;
+    margin-top: 6%;
     margin-bottom: 5%;
 }
 .column{
@@ -73,7 +79,6 @@
     height: 35vh;
 }
 .food_list{
-    padding: 4%;
     margin-top: 8%;
 }
 .food_list--img{
@@ -81,5 +86,11 @@
 }
 .food_list--info{
     width: 70%;
+}
+.img-box{
+    height: 8vh;
+    width: 15vw;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 }
