--- a/src/app/pages/home-layout/home-layout.component.scss
+++ b/src/app/pages/home-layout/home-layout.component.scss
@@ -16,6 +16,7 @@
   padding-right: 5%;
   position: fixed;
   background-color: white;
+  z-index: 2;
 }
 .search_bar--input{
   border-radius: 12%;
