--- a/src/app/pages/home-layout/home-layout.component.scss
+++ b/src/app/pages/home-layout/home-layout.component.scss
@@ -34,3 +34,13 @@
 //     background-color: antiquewhite !important;
 //     border-radius: 2rem !important;
 //   }
+
+.print_btn{
+
+  position: fixed;
+  padding: 8px;
+  top: 12px;
+  right: 12px;
+  background-color: burlywood;
+  color: blue;
+}
