--- a/src/app/pages/home-layout/home-layout.component.html
+++ b/src/app/pages/home-layout/home-layout.component.html
@@ -36,5 +36,6 @@
   </mat-drawer-content>
 </mat-drawer-container>
 </div>
-
-  
+<button class="print_btn" (click)="printScreen()">
+Print
+</button>
