--- a/src/app/pages/super-home/super-home.component.html
+++ b/src/app/pages/super-home/super-home.component.html
@@ -1,13 +1,19 @@
 <div class="main">
   <div class="main__inner-border">
-      <!-- <div class="main__inner-border--h1">
+    <!-- <div class="main__inner-border--h1">
 Restaurent Name
       </div> -->
     <div class="centre-box">
       <div>
         <p class="centre-box--h1">Hi, there</p>
         <p>
-          <button class="btn" mat-raised-button (click)="scan()"><mat-icon>qr_code_scanner</mat-icon><span style="margin-left: 8px;">Scan Your Table</span></button>
+
+          <ngx-scanner-qrcode #action="scanner" (data)="output = $event"></ngx-scanner-qrcode>
+          <span>{{output}}</span>
+          <button class="btn" mat-raised-button (click)="action.toggleCamera()"
+          [disabled]="action.isLoading">
+            <mat-icon>qr_code_scanner</mat-icon><span style="margin-left: 8px;">{{action.isStart ? 'Stop' : 'Start'}} Scanning Your Table</span>
+          </button>
         </p>
       </div>
 
