--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="section">
   <header class="section--heading nerko--wtbold font-xlarge">
-    <span class="section--textbox">Combo Deals</span>
+    <span class="section--textbox">Hits of the Week</span>
     <div class="row">
       <div class="column" *ngFor="let banner of banners">
         <div class="column__img" [ngStyle]="{'background-image': 'url(' + banner.url + ')'}">
