--- a/src/app/view-settings/_colors.scss
+++ b/src/app/view-settings/_colors.scss
@@ -1,3 +1,13 @@
+// Body Color
+$primary-body-color:#f5f7f5;
+$secondary-bodoy-color:#fff;
+
+
+// btn
+$primary-btn-color:rgb(29, 29, 29);
+$primary-btn-text-color:#fff;
+$territory-btn-color:rgb(187, 185, 185);
+
 $color-primary:	#FF7F50;
 $color-primary-light: #FC8A51;
 $color-secondary:white;
