--- a/src/app/view-settings/_colors.scss
+++ b/src/app/view-settings/_colors.scss
@@ -8,6 +8,7 @@ $primary-btn-color:rgb(29, 29, 29);
 $primary-btn-text-color:#fff;
 $territory-btn-color:rgb(187, 185, 185);
 
+////
 $color-primary:	#FF7F50;
 $color-primary-light: #FC8A51;
 $color-secondary:white;
