--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -106,6 +106,7 @@
 // }
 
 .banner {
+
   &_section {
     padding: 1rem;
     &--heading {
@@ -114,14 +115,15 @@
     &--tracker{
         display: flex;
         width: 100%;
-        padding-top: 1.2rem;
+        padding-top: 0.5rem;
         justify-content: space-between;
         &-item{
-            background-color: grey;
+            background-color: rgba(128, 128, 128, 0.418);
             height: 0.25rem;
             width: 100%;
-            margin: 0rem 1rem 0rem 1rem;
+            margin: 0rem 0.3rem 0rem 0.3rem;
             cursor: pointer;
+            transition: all 0.5s;
         }
     }
   }
@@ -131,15 +133,21 @@
     height: 35vh;
     padding-top: 1rem;
     position: relative;
+    overflow: hidden;
     &--item{
         background: linear-gradient(90deg, rgba(147,164,254,1) 0%, rgba(252,130,155,1) 100%);
-        height: 100%;
+        // height: 100%;
+        max-height: 35vh;
         width: 100%;
         border-radius: 2rem;
+        position: absolute;
+        right: -105%;
+        transition: all 0.5s;
+        
     }
     &--img{
         position: absolute;
-        top: 0px;
+        top: -1rem;
         width: 100%;
         height: 20vh;
         display: flex;
@@ -148,7 +156,7 @@
     &--content{
         display: flex;
         width: 100%;
-        padding-top: 23vh;
+        padding-top: 20vh;
         height: 12vh;
         &-title{
             display: flex;
@@ -175,4 +183,7 @@
         }
     }
   }
+}
+.active_tracker{
+background-color: black;
 }
