--- a/src/app/pages/home-layout/home-layout.component.html
+++ b/src/app/pages/home-layout/home-layout.component.html
@@ -1,4 +1,4 @@
-<div class="example-container" style="height: 90%;">
+<div class="example-container" style="height: 100%;">
    <mat-toolbar  class="toolbar">
     <button
       mat-icon-button
@@ -11,13 +11,13 @@
     <div class="toolbar-companyName">
       Restaurent name!
     </div>
-    <div class="toolbar-search">
+    <div class="toolbar-search" >
       <mat-icon class="toolbar-search_icon">search</mat-icon>
     </div>
    
   </mat-toolbar> 
   <mat-drawer-container style="height: 100%;background-color: white;" hasBackdrop="true">
-    <mat-drawer #drawer mode="over" >
+    <mat-drawer #drawer mode="over" style="padding-top: 3.3rem;">
       <mat-nav-list>
         <a mat-list-item routerLink="." *ngFor="let page of side_pages;let i=index" (click)="navigate(i);sidemenu.toggle();">{{
           page.name
@@ -35,6 +35,8 @@
       </span> 
     </mat-form-field>
   </section> -->
+
+  <!-- Some Changes For Testing -->
   <main class="content">
     <router-outlet></router-outlet>
   </main>
