DashboardMenu List Basic Structure

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,4 +69,7 @@
       <div *ngFor="let banner of banners;let slide_tracker=index;" id="{{'banner-'+slide_tracker+'-tracker'}}" class="banner_section--tracker-item"></div>
     </section>
   </section>
+  <section class="menu-list">
+    <dashboard-menu-items></dashboard-menu-items>
+  </section>
 </section>
